# hyperpixel

./: .gitignore  CMakeLists.txt  README.md  main.cpp
frontend/static/: index.html  index.js
libhyperpixel/: server.cpp  server.h  utils.cpp  utils.h
